--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sketch-spatial-chat",
+  "name": "design a thing",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,20 +18,13 @@
     "encoding": "^0.1.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "framer-motion": "^10.16.4",
     "next": "13.4.19",
     "openai": "^4.5.0",
-    "partykit": "^0.0.0-01ab147",
-    "partysocket": "^0.0.0-01ab147",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^9.0.1",
-    "rehype-highlight": "^7.0.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "y-partykit": "^0.0.0-01ab147",
-    "y-presence": "^0.2.3"
+    "typescript": "5.2.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10"
